[gd_scene load_steps=7 format=3 uid="uid://cnhtjauuofwrl"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_joi6o"]
[ext_resource type="Script" path="res://scripts/orderVisualizer.gd" id="2_hxlur"]
[ext_resource type="Script" path="res://scripts/priceDisplay.gd" id="2_jefl5"]
[ext_resource type="Texture2D" uid="uid://dqgeq3quoxin" path="res://assets/art/hold.png" id="2_lym6x"]
[ext_resource type="FontFile" uid="uid://e1l1t5u611rk" path="res://assets/Hefty Me.ttf" id="2_x1c10"]
[ext_resource type="PackedScene" uid="uid://f5lgc56hlwoh" path="res://scenes/agentPanel.tscn" id="5_6wdav"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_joi6o")

[node name="PlayerActionsHBox" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -403.0
offset_top = -118.0
offset_right = -173.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4

[node name="PlayerActionsVBox" type="VBoxContainer" parent="PlayerActionsHBox"]
layout_mode = 2

[node name="Buy" type="Button" parent="PlayerActionsHBox/PlayerActionsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_fonts/font = ExtResource("2_x1c10")
text = "BUY
"

[node name="Sell" type="Button" parent="PlayerActionsHBox/PlayerActionsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_fonts/font = ExtResource("2_x1c10")
text = "SELL"

[node name="Hold" type="Button" parent="PlayerActionsHBox/PlayerActionsVBox"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_x1c10")
text = "HOLD"

[node name="QuantityInput" type="LineEdit" parent="PlayerActionsHBox"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_x1c10")
placeholder_text = "Amt"

[node name="OrderVisualizer" type="TextureRect" parent="PlayerActionsHBox"]
layout_mode = 2
texture = ExtResource("2_lym6x")
expand_mode = 2
script = ExtResource("2_hxlur")

[node name="PlayerStats" type="VBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="PlayerCashDisplay" type="Label" parent="PlayerStats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x1c10")
text = "Cash: 100"

[node name="PlayerSharesDisplay" type="Label" parent="PlayerStats"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x1c10")
text = "Shares: 0"

[node name="MarketVbox" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -351.0
offset_right = 378.0
offset_bottom = 47.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarketValueDisplay" type="Label" parent="MarketVbox"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_x1c10")
text = "Market Value
"

[node name="Graph" type="Control" parent="MarketVbox"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("2_jefl5")

[node name="AgentPanel" parent="." instance=ExtResource("5_6wdav")]
custom_minimum_size = Vector2(250, 250)
anchors_preset = 11
anchor_left = 1.0
offset_left = -250.0
offset_bottom = -139.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_constants/separation = 125

[connection signal="pressed" from="PlayerActionsHBox/PlayerActionsVBox/Buy" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="PlayerActionsHBox/PlayerActionsVBox/Sell" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="PlayerActionsHBox/PlayerActionsVBox/Hold" to="." method="_on_hold_pressed"]
[connection signal="text_submitted" from="PlayerActionsHBox/QuantityInput" to="." method="_on_quantity_input_text_submitted"]
